--- a/system.Rmd
+++ b/system.Rmd
@@ -25,23 +25,30 @@ This section contains a detailed listing of the system's components.
 
 ### Indexable {#Indexable}
 
-As discussed in Section \@ref(row-based-or-column-based), when it comes to representing data, the column-based model offer several advantages over the row-based model. In this model, data is stored in a dictionary of contiguous arrays (as in, for example, a CSV file). Thus, the fundamental unit of data is the column, a fixed-length array of values.
+As discussed in Section \@ref(row-based-or-column-based), when it comes to representing data, the column-based model offer several advantages over the row-based model. In this model, data is stored in a dictionary of contiguous arrays (as in, for example, a CSV file). Thus, I chose to represent the fundamental unit of data as a column, a fixed-length array of values.
 
-However, at times, it may be useful to have additional flexibility. Specifically, it may be useful to include in our definition of a "column" not only fixed-length arrays but also constants and callbacks. 
-This is where the `Indexable<T>` type comes in. It represents a single "column" of data, and is just a union of three primitive types:
+However, at times, it may be useful to have additional flexibility. Specifically, it may be useful to to extend our definition of a "column" to non-array-like things, such as derived values and values repeated across all rows. This is where `Indexable<T>` comes in. 
+
+An `Indexable<T>` represents a single "column" of data, and is just a union of three basic types:
 
 ```{ts}
 #| eval: false 
 Indexable<T> = T | T[] | ((index: number) => T)
 ```
 
-In plain words, an `Indexable<T>` can be one of three things: a constant of type `T`, an array of `T`, or a callback that takes an index and returns a `T`. To extract values from `Indexable<T>`, we use a generalized form of subsetting by an index, which is implemented differently for each type. First, if the value is an array, we subset it using the usual square bracket notation. Second, if the value is a constant, we always return it regardless of the index (we can think of the value as being repeated across all rows). Third and finally, if the value is a callback, then we call it with the index and simply take the returned value. A uniform interface for doing this generalized form of subsetting is provided by [`Getters`](#Getters).   
+In plain words, an `Indexable<T>` is one of three things: 
 
-The advantage of the `Indexable<T>` type is that, while the raw data will typically come in the form of arrays, there are many places further down the data visualization pipeline where constants and callbacks are convenient. For example, in a typical barplot, the base of the y-axis is set to a constant value, typically zero. While we could hypothetically append a new array filled with zeros to the rendering data, it is more convenient and memory efficient to instead use a constant (`0`) or a thunk (`() => 0`). As another example, often, if we have an array of repeated values, it may be convenient to instead represent it as an array of underlying unique values and an array of indices (similar to R's `factor` class). We can then use a callback which takes an index and returns a position in the array of unique values.
+- A variable of type `T`
+- An array of `T`s 
+- A callback that takes an index and returns a `T`. 
+
+To extract a value from `Indexable<T>`, we rely on a generalized form of indexed access. The way how this indexed access works depends on the type of the indexable. First, if the indexable is an array, we subset it using the usual square bracket notation. Second, if the indexable is a non-array-like variable (but not a function), we always return it, regardless of the index (we can think of it as the value as being repeated across all rows). Third and finally, if the indexable is a callback, then we call it with the index and take the returned value. A uniform interface for this generalization of indexed access is provided by [`Getter`](#Getter)s.   
+
+The main advantage of `Indexable<T>` is that, while the raw data will typically come in the form of arrays, there are many places further down the data visualization pipeline where constants and callbacks are useful. For example, in a typical barplot, the base of the y-axis is set to a constant value, typically zero. While we could hypothetically append an array filled with zeros to the rendering data, it is more convenient and memory efficient to instead use a constant (`0`), or a thunk (`() => 0`). As another example, often, if we have an array of several repeated values, it may be convenient to instead represent it as two arrays: a (short) underlying array of unique values or labels and an array of indices (similar to base R's `factor` class). When we need the actual values, we can use a callback to subset the array of labels.
 
 ### Getter {#Getter}
 
-A `Getter<T>` is a function which takes an [`Indexable<T>`](#Indexable) as an argument and returns a new function, which, when given an index, returns a value of type `T`. For illustration, here is a slightly simplified implementation: 
+A `Getter<T>` is simply a function which takes an index and returns a value of type `T`. To construct a `Getter<T>`, we take an `Indexable<T>` and dispatch on its underlying type. For illustration, here is a (slightly) simplified implementation: 
 
 ```{ts}
 // Getter.ts
@@ -73,16 +80,14 @@ console.log(getter3(0));
 
 Note that, by definition, every `Getter<T>` is also automatically an `Indexable<T>` (since it is a callback `(index: number) => T`). This means that we can create new getters out of other getters.
 
-The `Getter` namespace also includes several utility functions. One example is `Getter.constant` which takes in a value `T` and returns a thunk which always returns `T` (i.e. `() => T`). This is useful, for example, when `T` is an array and we always want to return the whole array and not just a single indexed element. Another utility function is `Getter.proxy`, which takes a `Getter` and an array of indices, and returns a new `Getter` which proxies the access to the original values through the array of indices:
+The `Getter` namespace also includes several other utility functions. One example is `Getter.constant` which takes in a value `T` and returns a thunk which always returns `T` (i.e. `() => T`). This is useful, for example, when `T` is an array and we always want to return the whole array (not just a single element):
 
 ```{ts}
 #| echo: false
 // Getter.ts
 export namespace Getter {
-  export function of<T>(x: Indexable<T>): Getter<T> {
-    if (typeof x === `function`) return x;
-    else if (Array.isArray(x)) return (index: number) => x[index];
-    else return () => x
+  export function constant(indexable: Indeable<T>) {
+    return () => indexable;
   }
   export function proxy<T>(
     indexable: Indexable<T>,
@@ -98,15 +103,22 @@ export namespace Getter {
 ```{ts}
 import { Getter } from "./Getter"
 
+const getter4 = Getter.constant([`A`, `B`, `C`])
+
+console.log(getter4(0))
+console.log(getter4(1))
+```
+
+Another utility function is `Getter.proxy`, which takes a `Getter` and an array of indices, and returns a new `Getter` which proxies the access to the original values through the array of indices:
+
+```{ts}
+import { Getter } from "./Getter"
+
 const proxyGetter = Getter.proxy([`A`, `B`, `C`], [2, 1, 1, 0, 0, 0]);
 console.log([0, 1, 2, 3, 4, 5].map(proxyGetter))
 ```
 
-The `Getter.proxy` function becomes particularly useful when implementing `Factor`s.
-
-### Reactive
-
-`Reactive` is a fundamental mixin that is used throughout the system. It is essentially just an implementation of the Observer/EventEmitter pattern.
+This function becomes particularly useful when implementing `Factor`s.
 
 ### Dataframe
 
@@ -137,11 +149,61 @@ In the current version of the system, these fixed-length constraints are not enf
 
 I found the dynamic fixed-length checks to be the better option, for several reasons. First, they allow us to represent data as a plain JavaScript object (POJO) rather than having to instantiate a class. Second, due to JavaScript's dynamic nature, this approach is also safer: if, during runtime, the user adds a property to a `Dataframe` which violates the fixed-length constraints, this approach will catch the error. Third, and finally, for any data sets with typical dimensionality (more rows than columns, $p << n$), the tiny performance hit that may be incurred due to having to loop through the columns to find the length dynamically will be minuscule compared with the computational cost of looping through the data set's rows and doing work such as rendering or computing statistics. For high-dimensional datasets ($p >> n$), we could always extend the system to memoize the length/number of rows on the `Dataframe` object (although then we may lose the security of the dynamic runtime checks).    
 
+### Reactive
+
+By definition, an interactive data visualization system needs to be able to respond to user input and propagate this information wherever it needs to go. `Reactive` is a fundamental mixin that provides this utility. It is essentially just custom implementation of the Observer/EventEmitter pattern.
+
+Any object can be made `Reactive` by passing it into the `Reactive` constructor, and then calling it with functions from the `Reactive` namespace. Here is a simplified implementation:
+
+```{ts}
+// Reactive.ts
+const LISTENERS = Symbol(`listeners`); // A symbol key to emulate private property
+type Callback = (data: Record<string, unknown>) => void;
+
+export interface Reactive {
+  [LISTENERS]: Record<string, Callback[]>;
+}
+
+export namespace Reactive {
+  export function of<T extends Object>(object: T): T & Reactive {
+    return { ...object, [LISTENERS]: {} };
+  }
+
+  export function listen(object: Reactive, event: string, cb: Callback) {
+    if (!object[LISTENERS][event]) object[LISTENERS][event] = [];
+    object[LISTENERS][event].push(cb);
+  }
+
+  export function dispatch(
+    object: Reactive,
+    event: string,
+    data: Record<string, unknown> = {}
+  ) {
+    if (!object[LISTENERS][event]) return;
+    for (const cb of object[LISTENERS][event]) cb(data);
+  }
+}
+```
+
+We can use `Reactive` like so:
+
+```{ts}
+import { Reactive } from "./Reactive"
+
+const dog = Reactive.of({ name: `Terry the Terrier` })
+Reactive.listen(dog, `car goes by`, () => console.log(`Woof`))
+Reactive.dispatch(dog, `car goes by`)
+```
+
+The actual `Reactive` implementation includes more features, such as the ability to propagate events, throttle them and set their priority (determining the order in which event callbacks execute), remove listeners, and fire only once multiple events have been dispatched. However, the underlying model is the same.     
+
 ### Factors
 
-When visualizing data, we often need to split our data into several disjoint parts and compute summaries on these parts. Together, these parts forms a [partition](#Partitions) of the data, and these partitions may be organized in a hierarchy, such that one or more parts in a child partition "add up" to a part in the parent partition. 
+When visualizing data, we often need to split our data into several parts. As was discussed in Introduction [ADD REFERENCE], these parts together forms a [partition](#Partitions) of the data, and there may be multiple partitions organized in a hierarchy, such that one or more parts in a child partition "add up" to a part in the parent partition. 
 
-A `Factor` provides a way to represent such data partitions, as well as the associated metadata. In this way, it is similar to base R's `factor` S3 class, although there are some differences. It has the following interface:
+A `Factor` provides a way to represent such data partitions and the associated metadata. In this way, it is similar to base R's `factor` S3 class, although there are some important differences which will be discussed below. 
+
+`Factor` has the following interface:
 
 ```{ts}
 interface Factor<T extends Dataframe> extends Reactive {
@@ -152,17 +214,19 @@ interface Factor<T extends Dataframe> extends Reactive {
 }
 ```
 
-The `cardinality` of a factor represents the number of unique parts (indices) that the partition the factor represents has. For example, if the factor represents boolean partition of the data into two parts, the cardinality will be 2, if it represents a partition of the data into three parts (e.g. `"A"`, `"B"`, and `"C"`), the cardinality will be 3, if it represents a partition of the data between all countries in the world, the cardinality will be 195, and so on. Technically, the same information as `cardinality` is implicitly represented in the array of `indices`, however, for some operations, it is useful to be able to access `cardinality` directly instead of having to loop through `indices` to find the number of unique values each time. 
+`cardinality` records the number of unique parts (indices) that form the partition represented by the `Factor`. For example, if the factor represents boolean partitioning of the data into two parts, the cardinality will be 2, if it represents partitioning into three parts, the cardinality will be 3, if it represents a partitionining into all countries in the world, the cardinality will be 195, and so on. 
 
-Indices represent the actual assignment of cases (rows of the data) to the parts. For example, the array of indices `[1, 0, 1, 1, 2]` represents the first, third, and fourth case being assigned to part two, the second case being assigned to part one, and the fifth case being assigned to part three (keeping in mind JavaScript's zero-based indexing). As was mentioned above, the number of unique values in `indices` has to match the factor's `cardinality`, and the length of `indices` has to match the number of rows of the data that the factor partitions.
+`indices` represent the actual assignment of cases (rows of the data) to the parts. For example, the array of indices `[1, 0, 1, 1, 2]` represents the following partitioning: the second case (row) is assigned to the first part, the first, third, and fourth case are assigned to the second part, and the fifth case to the third part (keeping in mind JavaScript's zero-based indexing). As was mentioned above, the number of unique values in `indices` has to match the factor's `cardinality`, and the length of `indices` has to match the number of rows of the data set that the factor partitions.
 
-A factor may have metadata associated with each part, which stored in the `data` property of type [`Dataframe`](#Dataframe). This is a departure from base R's `factor` class, which represents all metadata as the vector of `levels`. For instance:
+Technically, `cardinality` represents the same information as is contained in `indices` (the number of unique values). However, for some operations, it is useful to be able to access cardinality directly, in $O(1)$ time, instead of having to loop through the entire array of indices ($O(n)$ time). Such is the case, for example, when constructing [product factors](#Product factors) or when initializing arrays of summaries.
+
+A factor may have associated metadata stored in the `data` property. The `data` property is a [`Dataframe`](#Dataframe) with one row for each part (i.e. the number of rows is equal to `cardinality`). Representing metadata as a dataframe represents a departure from base R's `factor` class, which represents all metadata as a flat vector of `levels`. For instance:
 
 ```{r}
 cut(1:10, breaks = c(0, 5, 10))
 ```
 
-In my system, the same information would be represented as:
+With `Factor`, the same information would be represented as:
 
 ```{ts}
 const factor: Factor = {
@@ -175,37 +239,59 @@ const factor: Factor = {
 };
 ```
 
-There are several reasons why it may be better to store `Factor` metadata in tables (`Dataframe`) as opposed to vectors. First, when partitioning data, we often want to associate several pieces of metadata with each part. For example, if we cut or bin some numeric variable, like in the example above, we want to store both the lower and upper bound of each part's bin. We can store both pieces of information as a single element (tuple) in an array/vector, the way that `cut` does it, however, this works well with only few pieces of metadata: once we start storing longer tuples, it becomes hard to tell what each tuple element represents. We could alleviate the problem by naming the tuple elements, but then we are essentially storing the metadata in an array of dictionaries, i.e. the [AoS](#SoA) data structure. We can do better by storing the metadata in a table. Second, if we store metadata in tables, it will be easier to combine when we take [a product of two or more factors](#Product factors). Since taking the product of multiple factors is a fundamental operation in an interactive data visualization system, underpinning operations such as linked brushing, it makes sense to use data representation which makes it convenient.
+There are several advantages to storing `Factor` metadata in a `Dataframe` as opposed to a flat vector/array. First, when partitioning data, we often want to associate several pieces of metadata with each part. For example, if we cut or bin some numeric variable, like in the example above, we want to store both the lower and upper bound of each part's bin. We could store both pieces of information as a single element (tuple) in an array/vector, the way that `cut` does it, however, this works well with only few pieces of metadata: once we start storing longer tuples, it becomes hard to tell what each tuple element represents. We could alleviate the problem by naming the tuple elements, but then we are essentially storing the metadata in an array of dictionaries, i.e. the [AoS](#SoA) data structure. We can do better by storing the metadata in a table. 
 
-There are several types of factors which differ semantically but are represented by the same underlying `Factor` data type. What differs are the constructor functions that are used to create these factors, and are exported by the `Factor` namespaces. These will be discussed in the following subsections.   
+Second, if we store metadata in a `Dataframe`, it is easier to combine it when we take [a product of two or more factors](#Product factors). Since taking the product of multiple factors is a fundamental operation in an interactive data visualization system, underpinning operations such as linked brushing, it makes sense to use this representation.
+
+There are multiple types of factors which differ semantic meaning as well as the associated metadata. However, all are represented by the same underlying `Factor` data type. To construct these `Factor` subtypes, we use different constructor functions which are all exported by the `Factor` namespace. These will be discussed in the following subsections.   
 
 #### Bijection factors
 
-`Factor.bijection` is the first of two trivial factor constructors. It assigns each case its individual part, such that the cardinality is simply equal to the number of cases. When we create a bijection factor, we need to specify the length of the data (the number of cases) it represents to create the array of `indices`. Technically, this is not strictly necessary: we could implement `indices` as a callback which simply takes an index and returns it (an indentity function). However, since the primary use of factors is for summarizing data, and we need to know how many data points to summarize, we do still need to store the length of the data somewhere. I found it convenient to simply create a dummy array of `indices`, as opposed to having to store a separate `length` property.
-
-`Factor.bijection` can also have associated metadata. 
-
-Thus, the function signature of `Factor.bijection` is simply:
+`Factor.bijection` is the first of two trivial factor constructors. It assigns each case its individual part, such that the cardinality of the resulting factor is simply equal to the number of cases in the data. The function signature of `Factor.bijection` is as follows:
 
 ```{ts}
+#| eval: false
 function bijection<T extends Dataframe>(n: number, data?: T): Factor<T> 
 ```
 
+Notice that, when we create a bijection factor, we need to specify the length of the data `n` (the number of cases). This is used to create `indices`. Technically speaking, explicitly specifying `n` is not necessary: we could implement `indices` as a callback which takes an index and simply returns it back (an identity function). However, since the factors are primarily used to summarize data, and we need to know how many cases to summarize, we do need to store the length of the data *somewhere*. I found it easier to simply create a dummy array of `indices`, rather than defining a separate `length` property on `Factor`. There is little computational cost associated with this, since, by definition, the partitioning represented by a bijection factor does not change^[Unless the length of the data changes. I have not implemented data streaming for plotscape/r yet, however, it would be easy to extend bijection factor for streaming by simply pushing/popping the array of indices.]. 
+
+`Factor.bijection` can also have associated metadata. This is just a `Dataframe` of length `n`.
+
+On an abstract level, a bijection factor represents a terminal object in the `Factor` category (a category of partitions with intersections as morphism). If we take the product of a bijection factor and any other factor, the result will always be another bijection.
+
+Typical use case of `Factor.bijection` is the scatterplot. When constructing a scatterplot, we simply take two arrays of equal length (three, if representing size as well) and draw one point per each element of the arrays. Thus, the partitioning `Factor` has the same cardinality as the length of the arrays and the arrays represent the factor's metadata. Another use case is the parallel coordinates plot.
+ 
 #### Constant factors
 
-Constant factors, or `Factor.mono`, are the polar opposite of bijection factors. They assign all cases of the data to a single part (thus, the label function is a constant function, hence the name). The constructor signature is the same as for [bijection factor](#Bijection factors), so I will omit it here.
+Constant factors, created with the `Factor.mono` constructor, are the second trivial factor subtype. They represent the dual of bijection factors, by assigning all cases of the data to a single part. Thus, the labeling function is a constant function (hence the name). The constructor signature is the same as for [bijection factors](#Bijection factors):
+
+```{ts}
+#| eval: false
+function mono<T extends Dataframe>(n: number, data?: T): Factor<T> 
+```
+
+The metadata associated with constant factors is, intuitively, a `Dataframe` of length 1, i.e. a dictionary of arrays with one element.
+
+On an abstract level, `Factor.mono` represents an initial object in the `Factor` category. That is, if we take the product of a constant factor and any other factor, the result will simply be the other factor (with the constant factor's metadata repeated in all of the other factor's partitions' metadata).
+
+The use cases for constant factors are a bit more obscure. One example is the spinogram. In a spinogram, the upper x-axis limit represents the cumulative sum (count) of all cases in the data. A convenient way to model this is by a constant factor. Another potential use case for constant factors might be plots with a single geometric object, such as a radar plot^[Not currently implemented in plotscape/r].  
 
 #### String factors
 
-If we have an array of values which are either strings or objects that can be coerced to strings (using the `.toString()` method), we can turn this into a factor, and treat two values as the same factor level if the underlying string representations are the same. This is the basis of `Factor.from`.
+When we have array of values which can be coerced to strings (using the `.toString()` method), we can easily turn this into a factor by treating two values as the same level if their string representations match. This is the basis of string factors constructed by `Factor.from`:
 
-The metadata associated with `Factor.from` simply contains an array of `labels`.
+```{ts}
+#| eval: false
+type Stringable = { toString(): string };
+function from(array: Stringable[]): Factor<{ labels: string[] }> 
+```
+
+The metadata associated with `Factor.from` is the array of `labels`, which are simply all of the unique values produced by applying the `toString()` method to each element in `array`.
 
 #### Binned factors
 
-`Factor.bin` takes an array of numeric values and partitions them among a number of (typically equal-sized) bins. As such, serves as the fundamental building block for histograms.
-
-The constructor signature is the following:
+When we have an array of numeric values, we can turn this into a factor by assigning the values to (typically equal-sized) bins, as in a histogram. This is what `Factor.bin` is for. It has the following constructor signature:
 
 ```{ts}
 function bin(
@@ -219,26 +305,15 @@ function bin(
 ): Factor<{ binMin: number[]; binMax: number[] }>;
 ```
 
-If `breaks` are provided, the constructor function uses those to construct the histogram. Otherwise it uses `nBins`, `width`, and `anchor` to determine the breaks, in the corresponding order of importance.
+Notice that the constructor comes with a list of options which control how the bins are created. If `breaks` are provided, the constructor uses those as the bins directly. Otherwise it uses `nBins`, `width`, and `anchor` to determine the breaks, in decreasing order of importance.
 
-`Factor.bin` produces metadata associated with the histogram bins, that is, the minimum and the maximum of each bin. That is, the result has the following shape:
-
-```{ts}
-{ 
-  cardinality: number, 
-  indices: number[], 
-  data: {
-    binMin: number[],
-    binMax: number[]
-  } 
-}
-```
+The metadata that `Factor.bin` produces are the limits of each bin (`binMin` and `binMax`).
 
 #### Product factors
 
 A fundamental operation that we need to be able to do with factors is to take their Cartesian product. That is, when we have two factors of same length, each with its corresponding array of indices, we need to be able to take the indices, combine them element-wise, and create a new factor that will have as its cardinality the number of unique pairwise combinations of indices.
 
-For example, take two factors represented by the following data:
+For example, take two factors represented by the following data (omitting the `data` property for conciseness):
 
 ```{ts}
 #| eval: false
@@ -253,22 +328,24 @@ If we take their product, we should end up with the following factor:
 { cardinality: 4, indices: [0, 1, 3, 0, 2, 3] };
 ```
 
-Notice that the cardinality of the new factor ($4$) is greater than that of either of the two constituent factors ($2$, $3$) but less than then their combined product ($2 \cdot 3 = 6$). This will generally be the case: if the first factor has cardinality $a$ and the second cardinality $b$, the product of the two factors will have cardinality $c$, such that:
+Notice that the cardinality of the resulting factor ($4$) is greater than that of either of the two constituent factors ($2$, $3$) but less than than the combined product of their cardinalities ($2 \cdot 3 = 6$). This will generally be the case: if the first factor has cardinality $a$ and the second cardinality $b$, the product of the two factors will have cardinality $c$, such that:
 
-- $c \geq a$ and $c \geq a$ (equality only if one or both of the factors are constant)
-- $c \leq a \cdot b$ (equality only if all element-wise index combinations are unique). 
+- $c \geq a$ and $c \geq a$ (equality only if one or both of the factors are constant or there is only one unique element-wise index combination)
+- $c \leq a \cdot b$ (equality only if all element-wise index combinations are unique) 
 
-That is, the number of parts that the product factor will have will be at least as many (but most likely more) as either of its constituent, and at most as many as the product of the numbers of the constituents' parts (but most likely fewer). This is a simple fact based on the logic of [partitions](#Partitions).
+That is, the product factor will have will be at least as many parts (but most likely more) as either of its constituent, and at most as many parts as the product of the numbers of the constituents' parts (but most likely fewer). This is a simple fact based on the logic of [partitions](#Partitions).
 
-However, an important problem to solve is how to actually determine the part indices. One naive idea might be to simply sum the factor indices element-wise, however, this does not work: the sums of two different pairs of indices may produce the same combined index. For instance, in a product of two factors of cardinality $4$, there are three different ways to get the combined index $4$: $1 + 3$, $3 + 1$, and $2 + 2$. Additionally, this method does not preserve order - intuitively, we would want the cases associated with lower values of the first factor's indices to come first.      
+##### Computing product indices
 
-The way out of this predicament is to use the following formula [similar to one discussed in @wickham2013]:
+A subtle challenge is how to actually compute indices of a product factor. One naive idea might be to simply sum the constituent factors' indices element-wise. However, this approach does not work: the sum of two different pairs of indices may produce the same value. For instance, in a product of two factors with cardinality $4$, there are three different ways to get indices which sum to $4$: $1 + 3$, $3 + 1$, and $2 + 2$. Additionally, this approach does not preserve order: intuitively, we would want the cases associated with lower values of the first factor's indices to come first (have lower index).      
 
-$$i_{\text{product}} = i_{\text{factor 2}} + i_{\text{factor 1}} \cdot \max(a, b)$$
+The way out of this predicament is to use the following formula [similar to one discussed in @wickham2013] for computing product indices:
 
-Here, we multiply the first factor's index by the greater cardinality of the two factors and add the index of the second factor. Intuitively then, the first factor gets assigned a greater "weight" (represented by the cardinality), and taking the maximum of the two cardinalities ensures that the unique pairs of indices will always produce unique combined indices.
+$$i_{\text{product}} = \max(a, b) \cdot i_{\text{factor 1}} + i_{\text{factor 2}}$$
 
-There are two issues with this method. First, it does not tell us what the cardinality of the product factor will be. Second, the indices it produces are not dense. For example, multiplying the indices of the factors above gets us the following:
+We multiply the first factor's index by the greater of the two factors' cardinalities and add the index of the second factor. Intuitively then, the first factor gets assigned a greater "weight" (represented by the cardinality), and taking the maximum of the two cardinalities ensures that unique pairs of indices always produce a unique product index (since, e.g. with factors of cardinalities 2 and 3, an index pair `(0, 2)` will produce a product index `2` and index pair `(1, 0)` will produce a product index `3`).
+
+This method works well but there are two issues with it that need to be addressed. First, computing the indices does not tell us the resulting cardinality. Second, the computed indices are not dense. For example, multiplying computing the product indices using the factors above gets us the following:
 
 ```{ts}
 #| eval: false
@@ -295,7 +372,7 @@ The third option, and the one I ended up going with, is to simply loop through t
 
 Steps 1. and 3. require looping through the array of same length as the data, i.e. an $O(n)$ complexity. Step 2. has hypothetically $O(n \cdot \log n)$ complexity (using the usual quicksort algorithm), however, the actual required work is likely to be much less, since, unless either of the two factors is a bijection or all of the product indices are unique (which is unlikely), the length of the array of unique indices will only be a fraction of the length of the data. Thus, the combined complexity of all three steps is likely to be $O(n)$, with $O(n \cdot \log n)$ worst case performance.
 
-Since the operation of computing product factors represents a "hot" code path (it is required, for example, every time linked selection happens), having to loop through an array of the length of the data twice is not ideal. However, in JavaScript, there is likely no better alternative. While we could hypothetically wrap indices in objects, and store the pointers to those, the memory and data access overhead of this approach would most likely result in performance characteristic many times worse. One of the data types JavaScript engines such as V8 are best optimized to handle are packed arrays of small integers [called "smi's", @veight2017], and so, heuristically, it makes to keep the indices in this format. Additionally, compared to the overhead of other operations (primarily rendering), the cost of looping through an array of integers twice is likely to be miniscule. Personally, this is what I have seen while profiling the system.        
+Since the operation of computing product factors represents a "hot" code path (it is required, for example, every time linked selection happens), having to loop through an array of the length of the data twice is not ideal. However, in JavaScript, there is likely no better alternative. While we could hypothetically wrap indices in objects, and store the pointers to those, the memory and data access overhead of this approach would most likely result in performance characteristic many times worse. One of the data types JavaScript engines such as V8 are best optimized to handle are packed arrays of small integers [called "smi's", @veight2017], and so, heuristically, it makes sense to keep the indices in this format. Additionally, compared to the overhead of other operations (such as rendering), the cost of looping through an array of small integers twice is likely to be miniscule. Personally, this is what I have seen while profiling the system.        
 
 ### Reducers
 
@@ -305,7 +382,9 @@ When we visualize, we draw summary statistics computed on different parts of the
 
 In the preceding section, I discussed the component used to represent partitioning of the data into parts: [factors](#Factors). Now it is time to discuss the process of actually computing the statistical summaries representing these parts. Interestingly, while all visualizations rely on this process in one way or another, designing a generic pipeline for doing this presents some surprising challenges.
 
-As one example of such a challenge, in interactive data visualization, one interactive feature that is quite desirable is the ability to convert a specific plot type into a different representation. For example, a typical barplot represents counts along the y-axis. This is useful for comparing absolute counts, however, it is less useful for comparing proportions. As such, some interactive data visualization systems offer the feature of turning a barplot into a spineplot, a normalized version of the plot where the counts are instead presented along the x-axis, in a stacked order, and the y-axis represents proportion of counts, see Figure \@ref(fig:barspine).
+One such important challenge is displaying coherent visualization. This topic has been discussed in the introduction, in Section [ADD REFERENCE]. Briefly, in order to be a valid representation of the data, an interactive data visualization system should compute and render statistics in such a way that the resulting visualization has correct algebraic properties. As was discussed previously, monoids and groups present a framework for ensuring this, and as such should serve as the backbone of our system.
+
+Another challenge is the hierarchical nature of graphics. In interactive data visualization, it is often desirable to be able to convert one specific plot type into a different representation. For example, a typical barplot represents counts along the y-axis. This is useful for comparing absolute counts, however, it is less useful for comparing proportions. As such, some interactive data visualization systems offer the feature of turning a barplot into a spineplot, a normalized version of the plot where the counts are instead presented along the x-axis, in a stacked order, and the y-axis represents proportion of counts, see Figure \@ref(fig:barspine).
 
 ```{r barspine}
 #| echo: false
@@ -382,7 +461,9 @@ What is so complicated about spineplots? First of all, both the x- and y-axes re
 
 In other words, the spineplot forces us to confront the fact that the summaries in our plots form a hierarchy. When we compute the summaries underlying a stacked barplot or spineplot, we are not merely computing a matrix of values where the rows and the columns have no underlying meaning - instead, we are implicitly saying that objects along the x-axis (whole bars) represent a coarser level of partitioning compared with the objects (stacked segments) along the y-axis. The only difference between a barplot and spineplot is, in the barplot, we can get away with treating the two factors as if they were independent (had the same "weight"), whereas in the spineplot this is no longer possible.
 
-This is why in declarative data visualization systems such as `ggplot2`, certain types of plots like spineplots are difficult to express. In these systems, the data is implicitly partitioned as a "flat" product of the factor variables. This makes it impossible to express the hierarchical structure that is encoded in plots like spineplots.    
+This is why in declarative data visualization systems such as `ggplot2`, certain types of plots like spineplots are difficult to express. In these systems, the data is implicitly partitioned as a "flat" product of the factor variables. This representation is convenient (e.g. for defining aesthetics via a single call to `aes()`) but makes it impossible to express hierarchical structures such as the one encoded in spineplot.    
+
+Thus, ideally, our system should make it easy specify a pipeline where we compute monoidal summaries of our data within a hierarchy of partitions represented by one or more factor variables, apply some transformations to these summaries (possibly across the levels of the hierarchy), and finally map the summaries to some visual attributes.
 
 ### Scales
 
