--- a/system.Rmd
+++ b/system.Rmd
@@ -4,7 +4,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-# System implementation
+# System description
 
 This section contains a description of the concrete system implementation ([plotscape](https://github.com/bartonicek/plotscape) and [plotscaper](https://github.com/bartonicek/plotscaper)).
 
